k8s/nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-kubespray-nlb-service
  namespace: java-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: java-app-kubespray
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9001
  type: LoadBalancer
