k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-kubespray-service
spec:
  selector:
    app: java-app-kubespray
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9001
  type: ClusterIP
